--- a/src/main/resources/data/mhfc/worldgen/noise_settings/frostzone_world_noise_settings.json
+++ b/src/main/resources/data/mhfc/worldgen/noise_settings/frostzone_world_noise_settings.json
@@ -38,7 +38,7 @@
     }
   },
   "default_block": {
-    "Name": "minecraft:stone"
+    "Name": "mhfc:frostzone_stone"
   },
   "default_fluid": {
     "Properties": {
