--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-	buildscript {
+buildscript {
     repositories {
         maven { url = 'https://files.minecraftforge.net/maven' }
         jcenter()
@@ -20,7 +20,7 @@ sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = co
 println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
 minecraft {
-    mappings channel: 'snapshot', version: '20201028-1.16.3'
+    mappings channel: 'official', version: '1.16.5'
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     runs {
         client {
@@ -60,34 +60,34 @@ minecraft {
     }
 }
 
-sourceSets.main.resources{
-	srcDir 'src/generated/resources'
+sourceSets.main.resources {
+    srcDir 'src/generated/resources'
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.0.1'
-    implementation fg.deobf('software.bernie.geckolib:forge-1.16.5-geckolib:3.0.3')
+    minecraft 'net.minecraftforge:forge:1.16.5-36.2.2'
+    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.16.5:3.0.43')
 }
 
 repositories {
-    maven { url 'https://repo.repsy.io/mvn/gandiber/geckolib' }
+    maven { url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/' }
 }
 
 jar {
     manifest {
         attributes([
-            "Specification-Title": "mhfc",
-            "Specification-Vendor": "Heltrato",
-            "Specification-Version": "1",
-            "Implementation-Title": project.name,
-            "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"Heltrato",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+                "Specification-Title"     : "mhfc",
+                "Specification-Vendor"    : "Heltrato",
+                "Specification-Version"   : "1",
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Vendor"   : "Heltrato",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
 }
 
-jar.finalizedBy('reobfJar') 
+jar.finalizedBy('reobfJar')
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -96,7 +96,7 @@ publishing {
     }
     repositories {
         maven {
-            url "file:///${project.projectDir}/mhfc 1.15.2"
+            url "file:///${project.projectDir}/mhfc 1.16.5"
         }
     }
 }
